# mindmap-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about.cpp  about.hpp  about.ui  definitions.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  icons.qrc  jsonserializable.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  mindmap-editor  mindmap-editor.pro  mindmap-editor_resource.rc  mindmap.cpp  mindmap.hpp  mindmapedge.cpp  mindmapedge.hpp  mindmapedgegraphicsitem.cpp  mindmapedgegraphicsitem.hpp  mindmapnode.cpp  mindmapnode.hpp  mindmapnodegraphicsitem.cpp  mindmapnodegraphicsitem.hpp  mindmapscene.cpp  mindmapscene.hpp  node.cpp  node.hpp  vertex.cpp  vertex.hpp
mindmap/: CMakeLists.txt
mindmap/include/: graph.hpp  vertex.hpp
mindmap/src/: graph.cpp  main.cpp  vertex.cpp
